// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataCollectionModal - UI Snapshots > matches snapshot of modal structure 1`] = `
<form
  aria-labelledby="data-collection-title"
  aria-modal="true"
  class="w-full max-w-md rounded-2xl bg-bg-card shadow-brand-lg transition-transform duration-200"
  novalidate=""
  role="dialog"
>
  <div
    class="flex items-center justify-between border-b border-border p-4"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield size-5 text-brand-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
      <h2
        class="text-base font-bold text-ink-900 sm:text-lg"
        id="data-collection-title"
      >
        留下聯絡方式，方便後續聯繫
      </h2>
    </div>
    <button
      aria-label="關閉"
      class="rounded-full p-1.5 text-text-muted transition-colors hover:bg-bg-base hover:text-ink-900 disabled:opacity-50"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="space-y-4 p-4"
  >
    <div
      class="bg-brand-50/40 flex items-start gap-3 rounded-xl border border-brand-100 p-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info mt-0.5 size-5 shrink-0 text-brand-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <p
        class="text-xs text-brand-700"
      >
        資料只用於交易紀錄，不會給別人看
      </p>
    </div>
    <div>
      <label
        class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
        for="data-name-input"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user size-4 text-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        姓名
        <span
          class="text-red-500"
        >
          *
        </span>
      </label>
      <input
        aria-invalid="false"
        class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
        id="data-name-input"
        maxlength="50"
        placeholder="你的名字"
        required=""
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
        for="data-phone-input"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone size-4 text-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"
          />
        </svg>
        電話
        <span
          class="text-red-500"
        >
          *
        </span>
      </label>
      <input
        aria-invalid="false"
        class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
        id="data-phone-input"
        inputmode="numeric"
        maxlength="10"
        placeholder="0912345678"
        required=""
        type="tel"
        value=""
      />
    </div>
    <div>
      <label
        class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
        for="data-email-input"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mail size-4 text-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
          />
          <rect
            height="16"
            rx="2"
            width="20"
            x="2"
            y="4"
          />
        </svg>
        Email
      </label>
      <input
        aria-invalid="false"
        class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
        id="data-email-input"
        maxlength="100"
        placeholder="email@example.com（選填）"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    class="flex gap-3 border-t border-border p-4"
  >
    <button
      class="min-h-[44px] flex-1 rounded-xl border border-border px-4 py-2.5 text-sm font-semibold text-ink-900 transition-colors hover:bg-bg-base disabled:opacity-50"
      type="button"
    >
      稍後再說
    </button>
    <button
      class="flex min-h-[44px] flex-1 items-center justify-center gap-2 rounded-xl bg-brand-700 px-4 py-2.5 text-sm font-semibold text-white transition-colors hover:bg-brand-600 disabled:bg-border disabled:text-text-muted"
      disabled=""
      type="submit"
    >
      確認送出
    </button>
  </div>
</form>
`;

exports[`DataCollectionModal - UI Snapshots > matches snapshot when closed 1`] = `<div />`;

exports[`DataCollectionModal - UI Snapshots > matches snapshot when open with empty form 1`] = `
<div>
  <div
    class="fixed inset-0 z-modal flex items-center justify-center bg-black/50 p-4 backdrop-blur-sm"
  >
    <form
      aria-labelledby="data-collection-title"
      aria-modal="true"
      class="w-full max-w-md rounded-2xl bg-bg-card shadow-brand-lg transition-transform duration-200"
      novalidate=""
      role="dialog"
    >
      <div
        class="flex items-center justify-between border-b border-border p-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield size-5 text-brand-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
          </svg>
          <h2
            class="text-base font-bold text-ink-900 sm:text-lg"
            id="data-collection-title"
          >
            留下聯絡方式，方便後續聯繫
          </h2>
        </div>
        <button
          aria-label="關閉"
          class="rounded-full p-1.5 text-text-muted transition-colors hover:bg-bg-base hover:text-ink-900 disabled:opacity-50"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="space-y-4 p-4"
      >
        <div
          class="bg-brand-50/40 flex items-start gap-3 rounded-xl border border-brand-100 p-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info mt-0.5 size-5 shrink-0 text-brand-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <p
            class="text-xs text-brand-700"
          >
            資料只用於交易紀錄，不會給別人看
          </p>
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-name-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            姓名
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            id="data-name-input"
            maxlength="50"
            placeholder="你的名字"
            required=""
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-phone-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-phone size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"
              />
            </svg>
            電話
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            id="data-phone-input"
            inputmode="numeric"
            maxlength="10"
            placeholder="0912345678"
            required=""
            type="tel"
            value=""
          />
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-email-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mail size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
              />
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
            </svg>
            Email
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            id="data-email-input"
            maxlength="100"
            placeholder="email@example.com（選填）"
            type="email"
            value=""
          />
        </div>
      </div>
      <div
        class="flex gap-3 border-t border-border p-4"
      >
        <button
          class="min-h-[44px] flex-1 rounded-xl border border-border px-4 py-2.5 text-sm font-semibold text-ink-900 transition-colors hover:bg-bg-base disabled:opacity-50"
          type="button"
        >
          稍後再說
        </button>
        <button
          class="flex min-h-[44px] flex-1 items-center justify-center gap-2 rounded-xl bg-brand-700 px-4 py-2.5 text-sm font-semibold text-white transition-colors hover:bg-brand-600 disabled:bg-border disabled:text-text-muted"
          disabled=""
          type="submit"
        >
          確認送出
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataCollectionModal - UI Snapshots > matches snapshot when submitting 1`] = `
<div>
  <div
    class="fixed inset-0 z-modal flex items-center justify-center bg-black/50 p-4 backdrop-blur-sm"
  >
    <form
      aria-labelledby="data-collection-title"
      aria-modal="true"
      class="w-full max-w-md rounded-2xl bg-bg-card shadow-brand-lg transition-transform duration-200"
      novalidate=""
      role="dialog"
    >
      <div
        class="flex items-center justify-between border-b border-border p-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield size-5 text-brand-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
          </svg>
          <h2
            class="text-base font-bold text-ink-900 sm:text-lg"
            id="data-collection-title"
          >
            留下聯絡方式，方便後續聯繫
          </h2>
        </div>
        <button
          aria-label="關閉"
          class="rounded-full p-1.5 text-text-muted transition-colors hover:bg-bg-base hover:text-ink-900 disabled:opacity-50"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="space-y-4 p-4"
      >
        <div
          class="bg-brand-50/40 flex items-start gap-3 rounded-xl border border-brand-100 p-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info mt-0.5 size-5 shrink-0 text-brand-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <p
            class="text-xs text-brand-700"
          >
            資料只用於交易紀錄，不會給別人看
          </p>
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-name-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            姓名
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            disabled=""
            id="data-name-input"
            maxlength="50"
            placeholder="你的名字"
            required=""
            type="text"
            value=""
          />
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-phone-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-phone size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"
              />
            </svg>
            電話
            <span
              class="text-red-500"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            disabled=""
            id="data-phone-input"
            inputmode="numeric"
            maxlength="10"
            placeholder="0912345678"
            required=""
            type="tel"
            value=""
          />
        </div>
        <div>
          <label
            class="mb-1.5 flex items-center gap-2 text-sm font-medium text-ink-900"
            for="data-email-input"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mail size-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
              />
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
            </svg>
            Email
          </label>
          <input
            aria-invalid="false"
            class="w-full rounded-xl border px-4 py-2.5 text-sm transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500/20 border-border focus:border-brand-500"
            disabled=""
            id="data-email-input"
            maxlength="100"
            placeholder="email@example.com（選填）"
            type="email"
            value=""
          />
        </div>
      </div>
      <div
        class="flex gap-3 border-t border-border p-4"
      >
        <button
          class="min-h-[44px] flex-1 rounded-xl border border-border px-4 py-2.5 text-sm font-semibold text-ink-900 transition-colors hover:bg-bg-base disabled:opacity-50"
          disabled=""
          type="button"
        >
          稍後再說
        </button>
        <button
          class="flex min-h-[44px] flex-1 items-center justify-center gap-2 rounded-xl bg-brand-700 px-4 py-2.5 text-sm font-semibold text-white transition-colors hover:bg-brand-600 disabled:bg-border disabled:text-text-muted"
          disabled=""
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle size-4 animate-spin"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
          送出中...
        </button>
      </div>
    </form>
  </div>
</div>
`;
